--- a/fronted.html
+++ b/fronted.html
@@ -12,8 +12,9 @@
         li a:hover { text-decoration: underline; }
     </style>
     <script>
+        const BASE_URL = window.location.origin;
         async function fetchHeadlines() {
-            const response = await fetch("http://127.0.0.1:5000/headlines_th");
+            const response = await fetch(`${BASE_URL}/headlines_th`);
             const data = await response.json();
             const container = document.getElementById("news-container");
             container.innerHTML = "";
